day8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-nginx
  namespace: gitops-demo
  labels:
    app: gitops-nginx

spec:
  replicas: 1

  selector:
    matchLabels:
      app: gitops-nginx

  template:
    metadata:
      labels:
        app: gitops-nginx

    spec:
      containers:
      - name: nginx

        image: vishwacloudlab/gitops-nginx:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 200m
            memory: 256Mi
