day8/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: gitops-nginx
  namespace: gitops-demo

spec:

  selector:
    app: gitops-nginx

  ports:

  - port: 80
    targetPort: 80

  type: LoadBalancer
